--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <h4 style="text-align: center;">WHAT WE DO</h4>
     <div class="row">
       <div class="col-md-4" id="design">
-        <div class="hide-design-image">
+        <div class="hide-mage">
           <img src="/IMAGES/design_icon.png" >
         </div>
           <p>DESIGN</p>
@@ -84,8 +84,8 @@
               Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
               Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
       </div>
-      <div class="col-md-4" id="development">
-        <div class="hide-development-image">
+      <div class="col-md-4" id="dev">
+        <div class="hide-image">
             <img src="IMAGES/dev_icon.png" >
         </div>
           <p>DEVELOPMENT</p>
@@ -93,8 +93,8 @@
               All engineers are fluent in the latest enterprise, mobile and web development technologies.
               They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
       </div>
-      <div class="col-md-4" id="productManagement">
-        <div class="hide-product-management">
+      <div class="col-md-4" id="prod">
+        <div class="hide-image">
             <img src="/IMAGES/product_icon.png">
         </div>  
           <p>PRODUCT MANAGEMENT</p>
@@ -109,53 +109,45 @@
 <!-----------------------------------------------portfolio---------------------------------------------------->
 
 <div class="Portfolio">
-  <h4 style="text-align: center;">PORTFOLIO</h4>
+  <h4 style="">PORTFOLIO</h4>
   <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work1">
+    <div class="col-sm-12 col-md-6 col-lg-3 " id="1">
         <img src="/IMAGES/1.jpg" width="100%">
       <div class="Hover">
        <p>ONE</p>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work2">
+    <div class="col-sm-12 col-md-6 col-lg-3 " id="2">
         <img src="IMAGES/2.jpg" width="100%">
       <div class="Hover">
         <p>TWO</p>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work3">
+    <div class="col-sm-12 col-md-6 col-lg-" id="3">
         <img src="/IMAGES/3.jpg" width="100%">
       <div class="Hover">
         <p>THREE</p>
       </div>
-    </div>
-    <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images " id="work4">
-        <img src="/IMAGES/4.jpg" width="100%">
-      <div class="Hover">
-        <p>FOUR</p>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work5">
+    </div>1
+    <div class="col-sm-12 col-md-6 col-lg-3 " id="5">
         <img src="/IMAGES/5.jpg" width="100%"> 
       <div class="Hover">
           <p>FIVE</p>
       </div> 
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work6">
+    <div class="col-sm-12 col-md-6 col-lg-3 " id="6">
         <img src="/IMAGES/6.jpg" width="100%">
       <div class="Hover">
         <p >SIX</p>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work7">
+    <div class="col-sm-12 col-md-6 col-lg-3 " id="7">
         <img src="/IMAGES/7.jpg" width="100%">
       <div class="Hover">
         <p>SEVEN</p>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work8">
+    <div class="col-sm-12 col-md-6 col-lg-3 " id="8">
         <img src="/IMAGES/8.jpg" width="100%">
       <div class="Hover">
         <p>EIGHT</p>
@@ -169,41 +161,29 @@
 <!-------------------------------------Contact us--------------->
 
 
-<div class="row"  id="contacts">
-  <div class="col-md-12">
-    <div class="card bg-dark text-white">
-      <img src="/IMAGES/c_image.jpg" class="card-img" >
-      <div class="card-img-overlay">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text">Last updated 3 mins ago</p>
-      </div>
-    </div>
 
-
-  </div>
 
 <!--------------------------------------------------------social cites -------------------->
-<div class="Footer" id="socialMediaIcons">
+<div class="Footer" id="ss">
   <br><br>
-  <!--Twitter-->
-  <img src="/IMAGES/1ss.png" alt="Twitter icon"><i class="fab fa-lg fa-twitter"></i></a>
-  <!--Dribbble-->
-  <img src="/IMAGES/2.jpg" alt="Dribble icon"><i class="fab fa-lg fa-dribbble"></i></a>
-   <!--Facebook-->
-  <img src="IMAGES/3ss.png" alt="Facebook icon">><i class="fab fa-lg fa-facebook-f"></i></a>
-  <!--Google -->
-  <img src="/IMAGES/4ss.png" alt="Google_plus icon"><i class="fab fa-lg fa-google-plus-g"></i></a>
-  <!--Skype-->
-  <img src="/IMAGES/5ss.png" alt="Skype icon"><i class="fab fa-lg fa-skype"></i></a>
-  <!--Stumble Upom-->
-  <img src="/IMAGES/6ss.png" alt="Stumble-upon icon"><i class="fab fa-lg fa-stumble-upon"></i></a>
-  <!--Behance-->
-  <img src="assets/social_icons/behance.png" alt="Behance icon"><i class="fab fa-lg fa-behance"></i></a>
-  <!--Pinterest-->
-  <img src="assets/social_icons/pinterest.png" alt="Pinterest icon"><i class="fab fa-lg fa-pinterest"></i></a>
-  <!--Flickr-->
-  <img src="assets/social_icons/flickr.png" alt="Flickr icon"><i class="fab fa-lg fa-flickr"></i></a>
+  
+  <img src="/IMAGES/1ss.png" ><i class="fab fa-lg fa-twitter"></i></a>
+
+  <img src="/IMAGES/2.jpg" ><i class="fab fa-lg fa-dribbble"></i></a>
+   
+  <img src="IMAGES/3ss.png" >><i class="fab fa-lg fa-facebook-f"></i></a>
+  
+  <img src="/IMAGES/4ss.png" ><i class="fab fa-lg fa-google-plus-g"></i></a>
+  
+  <img src="/IMAGES/5ss.png" ><i class="fab fa-lg fa-skype"></i></a>
+  
+  <img src="/IMAGES/6ss.png" ><i class="fab fa-lg fa-stumble-upon"></i></a>
+  
+  <img src="/IMAGES/7.jpg" ><i class="fab fa-lg fa-behance"></i></a>
+  
+  <img src="/IMAGES/8ss.png"><i class="fab fa-lg fa-pinterest"></i></a>
+
+  <img src="/IMAGES/9ss.png"><i class="fab fa-lg fa-flickr"></i></a>
   <p>DELANI STUDIO<br>2019</p>
 </div>
 </div>
