--- a/index.html
+++ b/index.html
@@ -112,54 +112,87 @@
 <div class="Portfolio">
   <h4 >PORTFOLIO</h4>
   <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-3 " id="1">
-        <img src="/IMAGES/1.jpg" width="100%">
+    <div class="col-md-3 " id="1">
+        <img src="/IMAGES/1.jpg" width="100px">
       <div class="Hover">
        <p>ONE</p>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-3 " id="2">
-        <img src="IMAGES/2.jpg" width="100%">
+    <div class=" col-md-3" id="2">
+        <img src="IMAGES/2.jpg" width="100px">
       <div class="Hover">
         <p>TWO</p>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-" id="3">
-        <img src="/IMAGES/3.jpg" width="100%">
+    <div class=" col-md-3" id="3">
+        <img src="/IMAGES/3.jpg" width="100px">
       <div class="Hover">
         <p>THREE</p>
       </div>
-    </div>1
-    <div class="col-sm-12 col-md-6 col-lg-3 " id="5">
-        <img src="/IMAGES/5.jpg" width="100%"> 
+    </div>
+    <div class=" col-md-3" id="4">
+        <img src="/IMAGES/4.jpg" width="100px"> 
       <div class="Hover">
-          <p>FIVE</p>
+          <p>FOUR</p>
       </div> 
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-3 " id="6">
-        <img src="/IMAGES/6.jpg" width="100%">
+    <div class="col-md-3 " id="5">
+        <img src="/IMAGES/5.jpg" width="100px">
       <div class="Hover">
-        <p >SIX</p>
+        <p >FIVE</p>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-3 " id="7">
-        <img src="/IMAGES/7.jpg" width="100%">
+    <div class="col-md-3 " id="6">
+        <img src="/IMAGES/6.jpg" width="100px">
+      <div class="Hover">
+        <p>SIX</p>
+      </div>
+    </div>
+    <div class="col-md-3 " id="7">
+        <img src="/IMAGES/7.jpg" width="100px">
       <div class="Hover">
         <p>SEVEN</p>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-3 " id="8">
-        <img src="/IMAGES/8.jpg" width="100%">
-      <div class="Hover">
-        <p>EIGHT</p>
-      </div>
+    <div class="col-md-3 " id="8">
+      <img src="/IMAGES/8.jpg" width="100px">
+    <div class="Hover">
+      <p>EIGHT</p>
     </div>
+  </div>
   </div>
 </div>
 
 
 
 <!-------------------------------------Contact us--------------->
+<div class="Contact-Us">
+  <h4 style="text-align: center; color:white">CONTACT US</h4>
+     <form action="https://gmail.us4.list-manage.com/subscribe/post?u=c40818488e702cd7135824a2b&amp;id=9e32737afc" method="post" id="mc-embedded-subscribe-form contact" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div class="row" id="contact-info-input">
+          <div class="col-6">
+            <div class="form-group">
+              <label for="name"></label>
+              <input type="text" name="FNAME" class="required form-control" id="mce-FNAME name" placeholder="Name...">
+
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="form-group">
+              <label for="email"></label>
+              <input type="text" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL email" placeholder="Email">
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="form-group">
+            <label for="message"></label>
+            <textarea type="text" name="MESSAGE" class="required form-control" id="mce-MESSAGE comment" cols="30" rows="10" placeholder="Your message here..."></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="submit"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+     </form>
+</div>
 
 
 
@@ -170,9 +203,9 @@
   
   <img src="/IMAGES/1ss.png" ><i class="fab fa-lg fa-twitter"></i></a>
 
-  <img src="/IMAGES/2.jpg" ><i class="fab fa-lg fa-dribbble"></i></a>
+  <img src="/IMAGES/2ss.png" ><i class="fab fa-lg fa-dribbble"></i></a>
    
-  <img src="IMAGES/3ss.png" >><i class="fab fa-lg fa-facebook-f"></i></a>
+  <img src="IMAGES/3ss.png" ><i class="fab fa-lg fa-facebook-f"></i></a>
   
   <img src="/IMAGES/4ss.png" ><i class="fab fa-lg fa-google-plus-g"></i></a>
   
@@ -180,7 +213,7 @@
   
   <img src="/IMAGES/6ss.png" ><i class="fab fa-lg fa-stumble-upon"></i></a>
   
-  <img src="/IMAGES/7.jpg" ><i class="fab fa-lg fa-behance"></i></a>
+  <img src="/IMAGES/7ss.png" ><i class="fab fa-lg fa-behance"></i></a>
   
   <img src="/IMAGES/8ss.png"><i class="fab fa-lg fa-pinterest"></i></a>
 
