--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     
@@ -168,31 +168,32 @@
 <!-------------------------------------Contact us--------------->
 <div class="Contact-Us">
   <h4 style="text-align: center; color:white">CONTACT US</h4>
-     <form action="https://gmail.us4.list-manage.com/subscribe/post?u=c40818488e702cd7135824a2b&amp;id=9e32737afc" method="post" id="mc-embedded-subscribe-form contact" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <div class="row" id="contact-info-input">
+     <form action="https://gmail.us4.list-manage.com/subscribe/post?u=c40818488e702cd7135824a2b&amp;id=9e32737afc" method="post" id="contact form" name="contact form" class="validate" target="_blank" novalidate>
+      <div class="row" id="contact-info">
           <div class="col-6">
-            <div class="form-group">
+            <div class="form">
               <label for="name"></label>
-              <input type="text" name="FNAME" class="required form-control" id="mce-FNAME name" placeholder="Name...">
+              <input type="text" name="FullNAME" class="form-" id="FNAME name" placeholder="Name...">
 
             </div>
           </div>
           <div class="col-6">
-            <div class="form-group">
+            <div class="form">
               <label for="email"></label>
-              <input type="text" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL email" placeholder="Email">
+              <input type="text" value="" name="EMAIL" class="required email" id="mce-EMAIL email" placeholder="Email">
             </div>
           </div>
           <div class="col-12">
-            <div class="form-group">
+            <div class="form">
             <label for="message"></label>
-            <textarea type="text" name="MESSAGE" class="required form-control" id="mce-MESSAGE comment" cols="30" rows="10" placeholder="Your message here..."></textarea>
+            <textarea type="text" name="MESSAGE" class="required message" id="MESSAGE comment" cols="30" rows="10" placeholder="Your message here..."></textarea>
           </div>
         </div>
       </div>
-      <div class="submit"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+      <div class="submit"><input type="submit" value="Submit" name="subscribe" id="subscribe" class="button"></div>
      </form>
 </div>
+
 
 
 
