--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!---------------------------------------------------------------------------about us-------------------->
     <div class="row" id="aboutus">
         <div class="col-md-12">
-            <h4 >ABOUT US</h4>
+            <h4 align="center">ABOUT US</h4>
             <p align="center">When you work with us,you are part of a team of committed collaborators.All aspects of our software development prcess are intergrated,interactive </p>
             <p align="center">and agile</p>
             <p align="center">Our approach unifies design,development and product management to create exceptional products</p>
@@ -55,8 +55,8 @@
             <div class="card bg-dark text-white">
                 <img src="/IMAGES/s_image.jpg" class="card-img"  >
                 <div class="card-img-overlay">
-                  <h5 class="card-title">SERVICES</h5>
-                  <p class="card-text">Before we sign a contract or write a line of code our team will spend the neccesary time possible to understand your product vision</p>
+                  <h5 class="card-title" align="center">SERVICES</h5>
+                  <p class="card-text" align="center">Before we sign a contract or write a line of code our team will spend the neccesary time possible to understand your product vision</p>
                   <p align="center">The outcome of this scoping session is  a proposal or high-level statement of work</p>
                   <p align="center">based on your requirments,we can provide a complete offering or just the pieces you need</p>
                   <p align="center">We start wach project by undrstanding your business goals,user's needs and the products requirements</p>
@@ -110,7 +110,7 @@
 <!-----------------------------------------------portfolio---------------------------------------------------->
 
 <div class="Portfolio">
-  <h4 >PORTFOLIO</h4>
+  <h4 align="center">PORTFOLIO</h4>
   <div class="row">
     <div class="col-md-3 " id="1">
         <img src="/IMAGES/1.jpg" width="100px">
