--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+   
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/bootstrap.min.css">
    <script src="/javascript/script.js"></script>
-    <title>Document</title>
+   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <title>Delani-Studio</title>
 </head>
 <body>
     <div class="row" id="carousel">
@@ -80,28 +81,34 @@
         <div class="hide-image">
           <img src="/IMAGES/design_icon.png" >
         </div>
+        <span>
           <p>DESIGN</p>
-          <p class="hide" id="show">
+          <p class="show">
               Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
               Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+        </span>
       </div>
       <div class="col-md-4" id="dev">
         <div class="hide-image">
             <img src="IMAGES/dev_icon.png" >
         </div>
+        <span>
           <p>DEVELOPMENT</p>
-          <p class="hide" id="show">
+          <p class="show">
               All engineers are fluent in the latest enterprise, mobile and web development technologies.
               They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+              </span>
       </div>
       <div class="col-md-4" id="prod">
         <div class="hide-image">
             <img src="/IMAGES/product_icon.png">
         </div>  
+        <span>
           <p>PRODUCT MANAGEMENT</p>
-          <p class="hide" id="show">
-                Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. 
+          <p class="show">
+                Planning and development is interative. Because we are constantly coding and testing, the products we build are always ready to go live. 
                 This iterative process allows for changes as business requirements evolve.</p>
+        </span>
       </div>
     </div>
 </div>
@@ -113,49 +120,49 @@
   <h4 align="center">PORTFOLIO</h4>
   <div class="row">
     <div class="col-md-3 " id="1">
-        <img src="/IMAGES/1.jpg" width="100px">
+        <img src="/IMAGES/1.jpg" width="200px">
       <div class="Hover">
        <p>ONE</p>
       </div>
     </div>
     <div class=" col-md-3" id="2">
-        <img src="IMAGES/2.jpg" width="100px">
+        <img src="IMAGES/2.jpg" width="200px">
       <div class="Hover">
         <p>TWO</p>
       </div>
     </div>
     <div class=" col-md-3" id="3">
-        <img src="/IMAGES/3.jpg" width="100px">
+        <img src="/IMAGES/3.jpg" width="200px">
       <div class="Hover">
         <p>THREE</p>
       </div>
     </div>
     <div class=" col-md-3" id="4">
-        <img src="/IMAGES/4.jpg" width="100px"> 
+        <img src="/IMAGES/4.jpg" width="200px"> 
       <div class="Hover">
           <p>FOUR</p>
       </div> 
     </div>
     <div class="col-md-3 " id="5">
-        <img src="/IMAGES/5.jpg" width="100px">
+        <img src="/IMAGES/5.jpg" width="200px">
       <div class="Hover">
         <p >FIVE</p>
       </div>
     </div>
     <div class="col-md-3 " id="6">
-        <img src="/IMAGES/6.jpg" width="100px">
+        <img src="/IMAGES/6.jpg" width="200px">
       <div class="Hover">
         <p>SIX</p>
       </div>
     </div>
     <div class="col-md-3 " id="7">
-        <img src="/IMAGES/7.jpg" width="100px">
+        <img src="/IMAGES/7.jpg" width="200px" class="img-fluid">
       <div class="Hover">
         <p>SEVEN</p>
       </div>
     </div>
     <div class="col-md-3 " id="8">
-      <img src="/IMAGES/8.jpg" width="100px">
+      <img src="/IMAGES/8.jpg" width="200px">
     <div class="Hover">
       <p>EIGHT</p>
     </div>
@@ -222,7 +229,6 @@
   <p>DELANI STUDIO<br>2019</p>
 </div>
 </div>
-<script scr="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-</script>
+
 </body>
 </html>
