edited style.css for services

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </div>
     </div>
     <div class="col-md-3 " id="7">
-        <img src="/IMAGES/7.jpg" width="200px" class="img-fluid">
+        <img src="/IMAGES/7.jpg" width="200px" >
       <div class="Hover">
         <p>SEVEN</p>
       </div>
