--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="card-img-overlay">
                   <h5 class="card-title" align="center">SERVICES</h5>
                   <p class="card-text" align="center">Before we sign a contract or write a line of code our team will spend the neccesary time possible to understand your product vision<br>
-                  The outcome of this scoping session is  a proposal or high-level statement of work<br>
+                 The outcome of this scoping session is  a proposal or high-level statement of work<br>
                   based on your requirments,we can provide a complete offering or just the pieces you need<br>
                   We start wach project by undrstanding your business goals,user's needs and the products requirements<br>
                   Then we help translate them into effective and elegant solutions</p>
@@ -81,44 +81,39 @@
         <div class="hide-design-image">
           <img src="/IMAGES/design_icon.png" >
         </div>
-        <span>
           <p>DESIGN</p>
-          <p class="show">
+          <p class="hide" id="design-showing">
               Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
               Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
-        </span>
       </div>
-      <div class="col-md-4" id="dev">
-        <div class="hide-image">
-            <img src="IMAGES/dev_icon.png" >
+      <div class="col-md-4" id="development">
+        <div class="hide-dev-image">
+            <img src="/IMAGES/dev_icon.png" >
         </div>
-        <span>
           <p>DEVELOPMENT</p>
-          <p class="show">
+          <p class="hide" id="development-showing">
               All engineers are fluent in the latest enterprise, mobile and web development technologies.
               They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
-              </span>
       </div>
-      <div class="col-md-4" id="prod">
-        <div class="hide-image">
+      <div class="col-md-4" id="productManagement">
+        <div class="hide-prod-image">
             <img src="/IMAGES/product_icon.png">
         </div>  
-        <span>
           <p>PRODUCT MANAGEMENT</p>
-          <p class="show">
-                Planning and development is interative. Because we are constantly coding and testing, the products we build are always ready to go live. 
+          <p class="hide" id="product-management-showing">
+                Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. 
                 This iterative process allows for changes as business requirements evolve.</p>
-        </span>
       </div>
     </div>
 </div>
+
 
 
 <!-----------------------------------------------portfolio---------------------------------------------------->
 
 <div class="Portfolio">
   <h4 align="center">PORTFOLIO</h4>
-  <div class="col-md-3">
+  <div class="col-sm-12 col-md-12  custom-info-on-portfolio-images">
   <div class="card bg-white text-black" id="BIG_C">
     <img src="/IMAGES/1.jpg" class="card-img" >
     <div class="card-img-overlay">
@@ -150,7 +145,7 @@
   </div>
   </div>
 
-  <div class="col-md-3">
+  <div class="col-sm-12 col-md-12  custom-info-on-portfolio-images">
   <div class="card bg-white text-black" id="BIG_C">
     <img src="/IMAGES/5.jpg" class="card-img" >
     <div class="card-img-overlay">
