--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    <link rel="stylesheet" href="/CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="/CSS/style.css">
-   <script src="/javascript/script.js"></script>
+    <link rel="stylesheet" type="text/style" href="CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/style.css">
    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <title>Delani-Studio</title>
 </head>
@@ -239,6 +237,7 @@
   <p>DELANI STUDIO<br>2019</p>
 </div>
 </div>
+<script src="/javascript/script.js"></script>
 
 </body>
 </html>
