--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img src="/IMAGES/h_img.jpg" class="d-block w-100"width="1000px">
                     <div class="carousel-caption d-none d-md-block">
                       <h5  align="center">WELCOME</h5>
-                      <h5 align="center">TO DELANI STUDIOS</h5>
+                      <h5 align="center">TO DELANI STUDIOS ghtgb</h5>
                       <p align="center">Amazing people are making amazing designs in a fun environment</p>
                     </div>
                   </div>
