--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"  href="/CSS/bootstrap.min.css">
+    <link rel="stylesheet"  href="/CSS/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-
     <link rel="stylesheet" href="CSS/style.css">
-   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <title>Delani-Studio</title>
+ 
+   <title>Delani-Studio</title>
 </head>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="/javascript/script.js"></script>
 <body>
     <div class="row" id="carousel">
         <div class="col-md-12">
@@ -24,7 +26,7 @@
                     <img src="/IMAGES/h_img.jpg" class="d-block w-100"width="1000px">
                     <div class="carousel-caption d-none d-md-block">
                       <h5  align="center">WELCOME</h5>
-                      <h5 align="center">TO DELANI STUDIOS ghtgb</h5>
+                      <h5 align="center">TO DELANI STUDIOS</h5>
                       <p align="center">Amazing people are making amazing designs in a fun environment</p>
                     </div>
                   </div>
@@ -70,7 +72,7 @@
 
         </div>
 
-    </div>
+ 6   </div>
 
 <!---------------------------------------------------------------what we do------------------>
 <div class="whatWeDo">
@@ -239,7 +241,6 @@
   <p>DELANI STUDIO<br>2019</p>
 </div>
 </div>
-<script src="/javascript/script.js"></script>
 
 </body>
 </html>
