--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/IMAGES/h_img.jpg" class="d-block w-100"width="1000px">
+                    <img src="./IMAGES/h_img.jpg" class="d-block w-100"width="1000px">
                     <div class="carousel-caption d-none d-md-block">
                       <h5  align="center">WELCOME</h5>
                       <h5 align="center">TO DELANI STUDIOS</h5>
