--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         </div>  
           <p>PRODUCT MANAGEMENT</p>
           <p class="hide" id="product-management-showing">
+            <span>
                 Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. 
                 This iterative process allows for changes as business requirements evolve.</p>
       </div>
@@ -185,8 +186,12 @@
 
 
 <!-------------------------------------Contact us--------------->
-<div class="Contact-Us">
+
+
+<div class="Contact-Us" >
   <h4 style="text-align: center; color:white">CONTACT US</h4>
+
+
      <form action="https://gmail.us4.list-manage.com/subscribe/post?u=c40818488e702cd7135824a2b&amp;id=9e32737afc" method="post" id="contact form" name="contact form" class="validate" target="_blank" novalidate>
       <div class="row" id="contact-info">
           <div class="col-6">
