--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <title>Delani-Studio</title>
 </head>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-<script src="/javascript/script.js"></script>
+<script src="./javascript/script.js"></script>
 <body>
     <div class="row" id="carousel">
         <div class="col-md-12">
@@ -226,23 +226,23 @@
 <div class="Footer" id="ss">
   <br><br>
   
-  <img src="/IMAGES/1ss.png" ><i class="fab fa-lg fa-twitter"></i></a>
+  <img src="./IMAGES/1ss.png" ><i class="fab fa-lg fa-twitter"></i></a>
 
-  <img src="/IMAGES/2ss.png" ><i class="fab fa-lg fa-dribbble"></i></a>
+  <img src="./IMAGES/2ss.png" ><i class="fab fa-lg fa-dribbble"></i></a>
    
-  <img src="IMAGES/3ss.png" ><i class="fab fa-lg fa-facebook-f"></i></a>
+  <img src="./IMAGES/3ss.png" ><i class="fab fa-lg fa-facebook-f"></i></a>
   
-  <img src="/IMAGES/4ss.png" ><i class="fab fa-lg fa-google-plus-g"></i></a>
+  <img src="./IMAGES/4ss.png" ><i class="fab fa-lg fa-google-plus-g"></i></a>
   
-  <img src="/IMAGES/5ss.png" ><i class="fab fa-lg fa-skype"></i></a>
+  <img src="./IMAGES/5ss.png" ><i class="fab fa-lg fa-skype"></i></a>
   
-  <img src="/IMAGES/6ss.png" ><i class="fab fa-lg fa-stumble-upon"></i></a>
+  <img src="./IMAGES/6ss.png" ><i class="fab fa-lg fa-stumble-upon"></i></a>
   
-  <img src="/IMAGES/7ss.png" ><i class="fab fa-lg fa-behance"></i></a>
+  <img src="./IMAGES/7ss.png" ><i class="fab fa-lg fa-behance"></i></a>
   
-  <img src="/IMAGES/8ss.png"><i class="fab fa-lg fa-pinterest"></i></a>
+  <img src="./IMAGES/8ss.png"><i class="fab fa-lg fa-pinterest"></i></a>
 
-  <img src="/IMAGES/9ss.png"><i class="fab fa-lg fa-flickr"></i></a>
+  <img src="./IMAGES/9ss.png"><i class="fab fa-lg fa-flickr"></i></a>
   <p>DELANI STUDIO<br>2019</p>
 </div>
 </div>
